--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ambrosia",
-  "short_name": "ambrosia",
+  "name": "Ambrosia",
+  "short_name": "Ambrosia",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
