--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ambrosia",
+  "name": "ambrosia-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "convert-units": "^2.3.4",
     "core-js": "^2.6.5",
     "purecss": "^1.0.0",
     "register-service-worker": "^1.6.2",
