--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "convert-units": "^2.3.4",
     "core-js": "^2.6.5",
     "purecss": "^1.0.0",
