--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bulma": "^0.7.5",
+    "bulma-prefers-dark": "0.1.0-beta.0",
     "convert-units": "^2.3.4",
     "core-js": "^2.6.5",
-    "purecss": "^1.0.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
