--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-prefers-dark": "0.1.0-beta.0",
+    "bulma-tagsinput": "^2.0.0",
     "convert-units": "^2.3.4",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
