--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-prefers-dark": "0.1.0-beta.0",
